--- a/Final_BD.ipynb
+++ b/Final_BD.ipynb
@@ -75,7 +75,7 @@
         "spark = SparkSession \\\n",
         ".builder \\\n",
         ".appName('MasterDB') \\\n",
-        ".config(\"spark.mongodb.connection.uri\", \"mongodb+srv://Alessandro:Alessandro2898@cluster0.7odju.mongodb.net/Yelp?retryWrites=true&w=majority\") \\\n",
+        ".config(\"spark.mongodb.connection.uri\", \"mongodb+srv://*************************************************\") \\\n",
         ".config('spark.jar.packages', 'org.mongodb.spark:mongo-spark-connector_2.11:2.4.1') \\\n",
         ".enableHiveSupport() \\\n",
         ".getOrCreate()"
@@ -110,7 +110,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#df = spark.read.format(\"com.mongodb.spark.sql.DefaultSource\").option(\"uri\", \"mongodb+srv://Alessandro:Alessandro2898@cluster0.7odju.mongodb.net/Yelp.Sandwitches?retryWrites=true&w=majority\").load()\n",
+        "#df = spark.read.format(\"com.mongodb.spark.sql.DefaultSource\").option(\"uri\", \"mongodb+srv://**********************************************************\").load()\n",
         "#df.coalesce(1).write.format('json').save('/content/Sandwitch3.json')\n",
         "!$SPARK_HOME/bin/pyspark --packages org.mongodb.spark:mongo-spark-connector_2.11:2.4.1"
       ],
